2001-02-10  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/match-window.jl
	(match-window-grab-x-property): enclose grabbed regexp in
	`^...$' so that it only matches the exact string

2001-02-07  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/window-order.jl (on-viewport-change): only
	call window-order-focus-most-recent if in click-to-focus mode,
	not when not in enter-exit mode

2001-02-06  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/match-window.jl (match-window-x-properties):
	added WM_WINDOW_ROLE to list of properties

	* sawfish/wm/state/transient.jl (transient-unmap-window): in
	sloppy focus mode avoid focusing on the desktop window just
	because the pointer is over it

2001-02-05  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/recolor-image.jl (make-lut): subtract
	mid-point from 255 not 256. Pointed out by Simon Budig
	<Simon.Budig@unix-ag.org>

2001-01-28  John Harper  <jsh@eazel.com>

	Work to fix bug 5758 (session management doesn't work in `don't
	automatically save' mode).

	Most of the credit goes to Timo Korvola
	<tkorvola@e.math.helsinki.fi> for working out what was wrong
	and providing the initial implementation

	* sawfish/wm/session/init.jl: lots of rewriting. The end result
	is that we never overwrite session files when saving data.
	Instead we use a unique prefix (the time in us in base 36) to
	the client id. (This is how XSM is supposed to work)

	* sawfish/wm/session/save.jl, sawfish/wm/session/load.jl
	(save-session, load-session): these functions now accept a
	filename argument instead of the client id

	* sawfish/wm.jl: check for --sm-prefix option, and pass it to
	sm-init when found

2001-01-27  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/configure.jl
	(configure-ignore-stacking-requests): new option. Controls
	whether stacking requests from windows are honoured or not. The
	window property `ignore-stacking-requests' has the same effect

	[ adapted from Matt Tucker <tuck@whistlingfish.net> ]
