@@ -1,3 +1,9 @@
+2001-02-13  John Harper  <jsh@eazel.com>
+
+	* sawfish/wm/user.jl (rc-files): new internal variable - the
+	list of rc files to try, currently ~/.sawfishrc, ~/.sawfish/rc
+	and ~/.sawmillrc
+
 2001-02-10  John Harper  <jsh@eazel.com>
 
 	* sawfish/wm/ext/match-window.jl
